--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb://localhost:27017/
-PORT=8000
+MONGO_URI=mongodb+srv://gammingab752:Pass%40123@lost-and-found.yyibl.mongodb.net/Apna-Network
+PORT=5000
 TWILIO_ACCOUNT_SID=AC2905561b2a7d735e2a7b3643809e2ce0
-TWILIO_AUTH_TOKEN=794e1582a0d5b37e3f6ea5da51d5b83e
+TWILIO_AUTH_TOKEN=1e6c10e0eb305d82d04c0ca83c310704
 TWILIO_PHONE_NUMBER=+14177650744
 TWILIO_VERIFY_SERVICE_SID="VA83236ba1f6ebb2622e965ea88e7f49aa"
 JWT_SECRET=your_jwt_secret 
