admin dashboard changes

--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb://localhost:27017/
+MONGO_URI=mongodb://localhost:27017/nagaServiceDB
 PORT=8000
 TWILIO_ACCOUNT_SID=AC2905561b2a7d735e2a7b3643809e2ce0
 TWILIO_AUTH_TOKEN=794e1582a0d5b37e3f6ea5da51d5b83e
 TWILIO_PHONE_NUMBER=+14177650744
-TWILIO_VERIFY_SERVICE_SID="VA83236ba1f6ebb2622e965ea88e7f49aa"
-JWT_SECRET=your_jwt_secret 
+TWILIO_VERIFY_SERVICE_SID=VA83236ba1f6ebb2622e965ea88e7f49aa
+JWT_SECRET=your_jwt_secret
