--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.888.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
