--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5",
+    "razorpay": "^2.9.6",
     "twilio": "^5.7.1"
   },
   "devDependencies": {
